2005-11-01  Jim Weirich  <jim@tardis>

	* lib/rubygems/gem_commands.rb (Gem::UpdateCommand::initialize):
	Upgrade => Update change.
	(Gem::UpdateCommand::execute): Upgrade => Update change.
	(Gem::UpdateCommand::execute): Upgrade => Update change.

2005-11-01  Chad Fowler  <chad@chadfowler.com>
       * lib/rubygems/gem_commands.rb: Allow gem unpack to accept a gem file
       path instead of gem name: gem unpack mygem-1.0.0.gem.

2005-10-31  Chad Fowler  <chad@chadfowler.com>
       * lib/rubygems/installer.rb: Tilman Sauerbeck's patch to support
        extensions built with Rake!

2005-09-13  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/package.rb (TarInput::initialize): Removed
	requirement for SSL when signatures are found in a gem.  Only
	require SSL if the security policy requires checking the
	signatures.

	* lib/rubygems/custom_require.rb (Kernel::require): Disabled
	autorequire during custom require.

2005-09-07  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/gem_openssl.rb (Gem::ensure_ssl_available): Added a
	test in gem_openssl to make sure the ruby portion of ssl is also
	loaded.

2005-08-31  Jim Weirich  <jim@weirichhouse.org>

	* Rakefile (install): Changed the rake install task to use setup.rb.

2005-07-08  Chad Fowler  <chad@chadfowler.com>

	* lib/rubygems/remote_installer.rb: Applied Daniel Roux's patch
        to make RubyGems work with authenticating proxies.

2005-07-08  Jim Weirich  <jim@weirichhouse.org>

	* Preparing for release 0.8.11.

2005-06-12  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/installer.rb
	(Gem::Installer::installation_satisfies_dependency): Refactored
	dependency check into ensure_dependency! and
	installation_satisfies_dependency?.

2005-06-12  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems.rb,lib/rubygems/installer.rb: Applied Mark Hubbart's
	* lib/rubygems/remote_installer.rb: Applied David Glasser's install-
	* Applied Paul Duncan's incredibly complete gem signing patch.
	Thanks, Paul!